added stopword removal, POS-Tagging, NER

--- a/NLP/2-stemming.ipynb
+++ b/NLP/2-stemming.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "22af22e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nltk\n",
     "from nltk.stem import PorterStemmer, RegexpStemmer, SnowballStemmer"
    ]
   },
@@ -23,35 +22,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1114db4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = [\n",
-    "    \"running\", \"runs\", \"ran\", \"runner\",\n",
-    "    \"jumps\", \"jumping\", \"jumped\",\n",
-    "    \"studies\", \"studying\", \"study\", \"student\",\n",
-    "    \"cries\", \"crying\", \"cried\",\n",
-    "    \"happily\", \"happiness\", \"happy\",\n",
-    "    \"organization\", \"organize\", \"organizing\", \"organizer\",\n",
-    "    \"agreement\", \"agreed\", \"agreeing\", \"agree\",\n",
-    "    \"computation\", \"computing\", \"computed\", \"computer\",\n",
-    "    \"policy\", \"policies\",\n",
-    "    \"connection\", \"connected\", \"connecting\", \"connects\",\n",
-    "    \"history\", \"historical\",\n",
-    "    \"finally\", \"final\", \"finalize\",\n",
-    "    \"cats\", \"cat\",\n",
-    "    \"dogs\", \"dog\",\n",
-    "    \"ponies\", \"pony\",\n",
-    "    \"trouble\", \"troubling\", \"troubled\",\n",
-    "    \"playing\", \"plays\", \"played\",\n",
-    "    \"corpora\", \"corpus\",\n",
-    "    \"better\", \"best\", \"good\",\n",
-    "    \"wolves\", \"wolf\",\n",
-    "    \"beautiful\", \"beautifully\",\n",
-    "    \"generous\", \"generously\", \"generation\"\n",
-    "]"
+    "words = [  \n",
+    "    \"running\", \"runs\", \"ran\", \"runner\",                             \n",
+    "    \"jumps\", \"jumping\", \"jumped\",                                   \n",
+    "    \"studies\", \"studying\", \"study\", \"student\",    \n",
+    "    \"cries\", \"crying\", \"cried\",   \n",
+    "    \"happily\", \"happiness\", \"happy\",                                                \n",
+    "    \"organization\", \"organize\", \"organizing\", \"organizer\",    \n",
+    "    \"agreement\", \"agreed\", \"agreeing\", \"agree\",    \n",
+    "    \"computation\", \"computing\", \"computed\", \"computer\",                 \n",
+    "    \"policy\", \"policies\",                                               \n",
+    "    \"connection\", \"connected\", \"connecting\", \"connects\",                                       \n",
+    "    \"history\", \"historical\",   \n",
+    "    \"finally\", \"final\", \"finalize\",    \n",
+    "    \"cats\", \"cat\",   \n",
+    "    \"dogs\", \"dog\",    \n",
+    "    \"ponies\", \"pony\",    \n",
+    "    \"trouble\", \"troubling\", \"troubled\",     \n",
+    "    \"playing\", \"plays\", \"played\",                                               \n",
+    "    \"corpora\", \"corpus\",                                                    \n",
+    "    \"better\", \"best\", \"good\",     \n",
+    "    \"wolves\", \"wolf\",     \n",
+    "    \"beautiful\", \"beautifully\",     \n",
+    "    \"generous\", \"generously\", \"generation\",      \n",
+    "]                                                 "
    ]
   },
   {
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "12f67827",
    "metadata": {},
    "outputs": [
@@ -149,7 +148,7 @@
     "stemming = PorterStemmer()\n",
     "\n",
     "for word in words: \n",
-    "    print(word+\"--->\"+stemming.stem(word))"
+    "    print(word+\"--->\"+stemming.stem(word)) "
    ]
   },
   {
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5fb2e46c",
    "metadata": {},
    "outputs": [
@@ -308,8 +307,7 @@
     "stemmer = SnowballStemmer(\"english\")\n",
     "\n",
     "for word in words: \n",
-    "    print(f\"Word: {word}\\t Stem: {stemmer.stem(word)}\")\n",
-    "\n"
+    "    print(f\"Word: {word}\\t Stem: {stemmer.stem(word)}\") "
    ]
   },
   {
@@ -338,13 +336,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eb37f2cd",
+   "cell_type": "markdown",
+   "id": "07cbd0b4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# stemming has it's limitations and it cannot be used for preprocessing text to train chatbots, lemmatisation and other techniques are better suited for that"
+    "<h1>Stemming</h1> has it's limitations and it cannot be used for preprocessing text to train chatbots, lemmatisation and other techniques are better suited for that"
    ]
   }
  ],
