--- a/NLP/3-lemmatization.ipynb
+++ b/NLP/3-lemmatization.ipynb
@@ -38,45 +38,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5ee664a3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "nltk.stem.wordnet.WordNetLemmatizer"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lemmatizer = WordNetLemmatizer() \n",
-    "\n",
-    "lemmatizer.lemmatize(\"going\")     \n",
-    "\n",
-    "type(lemmatizer)                    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "879a228e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ellipsis\n"
+      "<class 'nltk.stem.wordnet.WordNetLemmatizer'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'go'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(...)"
+    "lemmatizer = WordNetLemmatizer()                      \n",
+    "print(type(lemmatizer))\n",
+    "lemmatizer.lemmatize(\"going\", pos='v')                           "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "879a228e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['playing',\n",
+       " 'played',\n",
+       " 'play',\n",
+       " 'studying',\n",
+       " 'study',\n",
+       " 'studied',\n",
+       " 'running',\n",
+       " 'ran',\n",
+       " 'run',\n",
+       " 'connection',\n",
+       " 'connected',\n",
+       " 'connecting',\n",
+       " 'better',\n",
+       " 'best',\n",
+       " 'good',\n",
+       " 'car',\n",
+       " 'child',\n",
+       " 'mouse',\n",
+       " 'wa',\n",
+       " 'were',\n",
+       " 'is',\n",
+       " 'are',\n",
+       " 'having',\n",
+       " 'had',\n",
+       " 'ha',\n",
+       " 'easily',\n",
+       " 'fairly',\n",
+       " 'happiness',\n",
+       " 'organization',\n",
+       " 'organizational']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "words = [\n",
+    "    \"playing\", \"played\", \"plays\",\n",
+    "    \"studying\", \"studies\", \"studied\",\n",
+    "    \"running\", \"ran\", \"runs\",\n",
+    "    \"connections\", \"connected\", \"connecting\",\n",
+    "    \"better\", \"best\", \"good\",\n",
+    "    \"cars\", \"children\", \"mice\",\n",
+    "    \"was\", \"were\", \"is\", \"are\",\n",
+    "    \"having\", \"had\", \"has\",\n",
+    "    \"easily\", \"fairly\", \"happiness\",\n",
+    "    \"organization\", \"organizational\"\n",
+    "]\n",
+    "\n",
+    "processed = [lemmatizer.lemmatize(word) for word in words]\n",
+    "processed"
    ]
   },
   {
